# Whispering

./: .gitignore  AI_SETUP.md  INSTALL_TTS.md  README.md  STRUCTURE.md  pyproject.toml  requirements.txt
config/: custom_personas.yaml.example  voice_commands.yaml
docs/: voice-commands-feasibility.md
scripts/: README.md  install.sh  run.sh  run_nicegui.py  run_nicegui.sh  run_nicegui_direct.sh  run_tkinter.py  run_tkinter.sh
src/: ai_provider.py  command_detector.py  command_executor.py  commands_config.py  core.py  debug.py  gui.py  session_logger.py  settings.py  tts_controller.py  tts_provider.py  tui.py
src/core_parts/: audio_devices.py  processing.py
src/ui/: README.md  __init__.py  main.py
src/whispering_ui/: README.md  __init__.py  bridge.py  main.py  state.py
src/whispering_ui/components/: __init__.py  help.py  output.py  sidebar.py
