[project]
name = "whispering"
version = "1.4.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "conformer>=0.3.2",
    "diffusers>=0.29.0",
    "faster-whisper>=1.2.1",
    "librosa>=0.11.0",
    "nicegui>=1.4.0",
    "numpy>=2.0.0",
    "omegaconf>=2.3.0",
    "pyautogui>=0.9.54",
    "pyperclip>=1.11.0",
    "pyqt6>=6.0.0",
    "pyqt6-webengine>=6.0.0",
    "python-dotenv>=1.0.0",
    "pywebview>=4.0.0",
    "pyyaml>=6.0",
    "qtpy>=2.0.0",
    "requests>=2.32.5",
    "resemble-perth>=1.0.1",
    "s3tokenizer>=0.2.0",
    "safetensors>=0.5.3",
    "setuptools>=80.9.0",
    "sounddevice>=0.5.3",
    "soundfile>=0.12.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "transformers>=4.46.0",
    "wheel>=0.45.1",
]
